Added company updates to homepage and about.html. Added a top banner (.homepage-content) to the homepage to make the title stand out. Added images to the checkout so that the actual products appeared on the page.

--- a/checkout.html
+++ b/checkout.html
@@ -29,15 +29,15 @@
       <h1>Checkout <span class="step-not-selected">/ Review / Confirm</span></h1>
 
       <section id="current-styles">
-      <h2 class="subheading">My Items</h2>
-
+      <h2 class="subheading more-below">My Items</h2>
         <div class="cart-item more-below">
+          <h3>Bike T-Shirt</h3>
           <div class="cart-item-box">
-            <img class="img-cart-view" src="http://placehold.it/160x160">
+            <img class="img-cart-view" src="img/tshirt-bike.png">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
-                <dd>Red</dd>
+                <dd>Blue</dd>
               </div>
               <div class="container-item">
                 <dt>Size</dt>
@@ -58,12 +58,13 @@
         </div>
 
         <div class="cart-item more-below">
+          <h3>Mountain T-Shirt</h3>
           <div class="cart-item-box">
-            <img class="img-cart-view" src="http://placehold.it/160x160">
+            <img class="img-cart-view" src="img/tshirt-mountain.png">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
-                <dd>Red</dd>
+                <dd>Green</dd>
               </div>
               <div class="container-item">
                 <dt>Size</dt>
@@ -84,12 +85,13 @@
         </div>
 
         <div class="cart-item more-below">
+          <h3>Picnic T-Shirt</h3>
           <div class="cart-item-box">
-            <img class="img-cart-view" src="http://placehold.it/160x160">
+            <img class="img-cart-view" src="img/tshirt-picnic.png">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
-                <dd>Red</dd>
+                <dd>Yellow</dd>
               </div>
               <div class="container-item">
                 <dt>Size</dt>
