--- a/home.html
+++ b/home.html
@@ -14,7 +14,6 @@
   </head>
 
   <body>
-
     <div class="wrapper"> <!-- // DIV that wraps around the whole document -->
 
       <!-- // NAVIGATION -->
@@ -26,13 +25,17 @@
       </nav>
       <!-- NAVIGATION // -->
 
-      <div class="homepage-content">
-        <h1>Vancouver-designed. One-of-a-kind.</h1>
+    </div>
 
-        <p>Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia. Only available for one month!</p>
+    <div class="homepage-content">
+      <h1>Vancouver-designed. One-of-a-kind.</h1>
 
-        <a class="button submit" href="about.html">More About Us</a>
-      </div>
+      <p>Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia. Only available for one month!</p>
+
+      <a class="button submit" href="about.html">More About Us</a>
+    </div>
+
+    <div class="wrapper"> <!-- // DIV that wraps around the whole document -->
 
       <section id="current-styles" class="more-below">
       <h2 class="subheading">Current Styles</h2>
@@ -112,13 +115,19 @@
 
         <div class="grid-container">
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <h3>We're open again!</h3>
+            <p class="updates-date">October 20, 2015</p>
+            <p>After three weeks of renovations, we've reopened our office! We'd love to see you, so swing by to say hello and check out our newest styles!</p>
           </div>
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <h3>October styles are here!</h3>
+            <p class="updates-date">October 1, 2015</p>
+            <p>Our September styles have officially ended, and our October styles are here for the next month. <a href="current-styles.html">Check out the current styles!</a></p>
           </div>
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <h3>Fall Renovations</h3>
+            <p class="updates-date">September 27, 2015</p>
+            <p><em>Fit To A Tee</em> will be closing its office from September 29th until October 20th for renovations. You won't be able to come visit us, but you'll still be able to buy your shirts online, so don't worry!</p>
           </div>
         </div>
         <a class="button more-info" href="about.html">More About Us</a>
