--- a/about.html
+++ b/about.html
@@ -97,13 +97,19 @@
 
         <div class="grid-container">
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <h3>We're open again!</h3>
+            <p class="updates-date">October 20, 2015</p>
+            <p>After three weeks of renovations, we've reopened our office! We'd love to see you, so swing by to say hello and check out our newest styles!</p>
           </div>
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <h3>October styles are here!</h3>
+            <p class="updates-date">October 1, 2015</p>
+            <p>Our September styles have officially ended, and our October styles are here for the next month. <a href="current-styles.html">Check out the current styles!</a></p>
           </div>
           <div class="col-1of3">
-            <div class="img-filler"></div>
+            <h3>Fall Renovations</h3>
+            <p class="updates-date">September 27, 2015</p>
+            <p><em>Fit To A Tee</em> will be closing its office from September 29th until October 20th for renovations. You won't be able to come visit us, but you'll still be able to buy your shirts online, so don't worry!</p>
           </div>
         </div>
       </section>
