Added small paragraph content under the headings on the review and checkout pages

--- a/review.html
+++ b/review.html
@@ -27,6 +27,7 @@
       <!-- NAVIGATION // -->
 
       <h1><span class="step-not-selected">Checkout /</span> Review <span class="step-not-selected">/ Confirm</span></h1>
+      <p>Take one more look at your order. This is your last chance to review your order before confirming it!</p>
 
       <section id="review-order">
       <h2 class="subheading">Review Order</h2>
