Moved Javascript to the bottom of the page to reduce loading speeds

--- a/about.html
+++ b/about.html
@@ -11,9 +11,6 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Hind:400,600' rel='stylesheet' type='text/css'>    
     <link href="css/main.css" rel="stylesheet">
 
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="js/map.js"></script>
-
   </head>
 
   <body>
@@ -164,5 +161,9 @@
       </footer>
 
     </div>
+
+    <!-- Run the scripts only at the end, after loading the page -->
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
+    <script src="js/map.js"></script>
   </body>
 </html>
