reduce the image size for checkout items

--- a/checkout.html
+++ b/checkout.html
@@ -34,7 +34,7 @@
         <div class="cart-item more-below">
           <h3>Bike T-Shirt</h3>
           <div class="cart-item-box">
-            <img class="img-cart-view" src="img/tshirt-bike.png">
+            <img class="img-cart-view" src="img/tshirt-bike-small.png">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
@@ -61,7 +61,7 @@
         <div class="cart-item more-below">
           <h3>Mountain T-Shirt</h3>
           <div class="cart-item-box">
-            <img class="img-cart-view" src="img/tshirt-mountain.png">
+            <img class="img-cart-view" src="img/tshirt-mountain-small.png">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
@@ -88,7 +88,7 @@
         <div class="cart-item more-below">
           <h3>Picnic T-Shirt</h3>
           <div class="cart-item-box">
-            <img class="img-cart-view" src="img/tshirt-picnic.png">
+            <img class="img-cart-view" src="img/tshirt-picnic-small.png">
             <dl class="container">
               <div class="container-item">
                 <dt>Colour</dt>
