--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <img src="img/designer1.jpg" alt=" " class="img-team">
+            <img src="img/designer1.png" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Justin Schurtz</h3>
@@ -66,7 +66,7 @@
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <img src="img/designer2.jpeg" alt=" " class="img-team">
+            <img src="img/designer2.png" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Shirley Knott</h3>
@@ -78,7 +78,7 @@
 
         <div class="grid-container">
           <div class="col-1of3">
-            <img src="img/designer3.jpg" alt=" " class="img-team">
+            <img src="img/designer3.png" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Chris Anthemum</h3>
