change the css for subtotal only on the checkout page font-size:1.25rem; text-align: right; padding-right: 1rem;

--- a/checkout.html
+++ b/checkout.html
@@ -111,8 +111,7 @@
           <a class="button edit" href="current-item.html">Edit</a>
           <a class="button delete" href="">Delete</a>
         </div>
-
-        <p class="subtotal">
+        <p class="subtotal-checkout">
           <strong>Subtotal:</strong> $89.97<br/>
           <strong>Tax:</strong> $10.80<br/>
           <strong>Shipping/Handling:</strong> $5.40<br/>
