change the subheading size to 1.2rem add a subheading class in <p> tag p.subheading { font-size = 1.2 rem; }

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 
       <h1>About Us</h1>
 
-      <p><em>Fit to a Tee</em> is a Vancouver-based t-shirt company that makes limited edition, short run, one of a kind t-shirts. We design unique styles which are <strong>only available for one month</strong>, so that everything stays nice and fresh. We want you to look great in a t-shirt that few other people can call their own, and we want you to feel great about wearing it.</p>
+      <p class="subheading"><em>Fit to a Tee</em> is a Vancouver-based t-shirt company that makes limited edition, short run, one of a kind t-shirts. We design unique styles which are <strong>only available for one month</strong>, so that everything stays nice and fresh. We want you to look great in a t-shirt that few other people can call their own, and we want you to feel great about wearing it.</p>
 
       <section id="values" class="more-below">
       <h2 class="subheading">What We Believe In</h2>
