--- a/current-styles.html
+++ b/current-styles.html
@@ -27,7 +27,7 @@
       <!-- NAVIGATION // -->
 
       <h1>Current Styles</h1>
-      <p>These styles only run until <strong>October 31, 2015</strong>, so get them while you can!</p>
+      <p class="subheading">These styles only run until <strong>October 31, 2015</strong>, so get them while you can!</p>
 
        <!-- // CURRENT-STYLES // -->
 
