--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
     <div class="homepage-content">
       <h1>Vancouver-designed. One-of-a-kind.</h1>
 
-      <p>Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia. Only available for one month!</p>
+      <p class="subheading">Discover unique, sustainable, and beautifully-designed t-shirts from Vancouver, British Columbia. Only available for one month!</p>
 
       <a class="button submit" href="about.html">More About Us</a>
     </div>
