--- a/past-styles.html
+++ b/past-styles.html
@@ -27,7 +27,7 @@
       <!-- NAVIGATION // -->
 
       <h1>Past Styles</h1>
-      <p>These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
+      <p class="subheading">These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
 
        <!-- // PAST-STYLES // -->
 
