Added subheading paragraphs to review process. Cleaned up main.css

--- a/checkout.html
+++ b/checkout.html
@@ -27,7 +27,7 @@
       <!-- NAVIGATION // -->
 
       <h1>Checkout <span class="step-not-selected">/ Review / Confirm</span></h1>
-      <p>Review your items, and let us know how you'd like us to ship them to you and charge you for them.</p>
+      <p class="subheading">Review your items, and let us know how you'd like us to ship them to you and charge you for them.</p>
 
       <section id="current-styles">
       <h2 class="subheading more-below">My Items</h2>
