--- a/confirm.html
+++ b/confirm.html
@@ -30,8 +30,8 @@
 
       <section id="confirm-order">
       <h2 class="subheading">Thank you!</h2>
-      <p>We've processed your order. We'll send you an email confirmation once your order ships; your credit card won't be charged until then.</p>
-      <p>In the meantime, why not do some more shopping while you're here?</p>
+      <p class="subheading">We've processed your order. We'll send you an email confirmation once your order ships; your credit card won't be charged until then.</p>
+      <p class="subheading">In the meantime, why not do some more shopping while you're here?</p>
       
       <a class="button submit" href="current-styles.html">Shop Some More</a>
       </section>
