Modified references to reflect file name changes

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 
       <!-- // NAVIGATION -->
       <nav class="fixed-nav-bar">
-        <a href="home.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
+        <a href="index.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
         <ul>
           <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
@@ -54,7 +54,7 @@
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <img src="img/designer1.png" alt=" " class="img-team">
+            <img src="img/headshot-justin-schurtz.png" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Justin Schurtz</h3>
@@ -66,7 +66,7 @@
 
         <div class="grid-container more-below">
           <div class="col-1of3">
-            <img src="img/designer2.png" alt=" " class="img-team">
+            <img src="img/headshot-shirley-knott.png" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Shirley Knott</h3>
@@ -78,7 +78,7 @@
 
         <div class="grid-container">
           <div class="col-1of3">
-            <img src="img/designer3.png" alt=" " class="img-team">
+            <img src="img/headshot-chris-anthemum.png" alt=" " class="img-team">
           </div>
           <div class="col-2of3">
             <h3 class="title-team">Chris Anthemum</h3>
@@ -123,7 +123,7 @@
           <div class="col-1of3">
             <h3>Where We Are</h3>
             <div class="vcard more-below">
-              <p class="fn"><a class="url" href="home.html">Fit To A Tee</a></p>
+              <p class="fn"><a class="url" href="index.html">Fit To A Tee</a></p>
               <p class="adr">
                 <span class="street-address">125 Main Street</span><br>
                 <span class="region">Vancouver, BC</span><br>
