--- a/past-styles.html
+++ b/past-styles.html
@@ -19,7 +19,7 @@
 
       <!-- // NAVIGATION -->
       <nav class="fixed-nav-bar">
-        <a href="home.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
+        <a href="index.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
         <ul>
           <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
@@ -36,7 +36,7 @@
         <div class="grid-container">
           <figure class="col-1of3"><a href="past-item.html">
             <div class="product-listing">
-              <img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front. ">
+              <img src="img/tshirt-box.png" alt="T-shirt with a gift box on the front. ">
               <figcaption class="product-info">
                 <p class="product-name">Gift Box T-Shirt</p>
                 <p class="product-date">September 2015</p>
@@ -45,7 +45,7 @@
           </figure>
           <figure class="col-1of3"><a href="past-item.html">
             <div class="product-listing">
-              <img src="img/tshirt_balloon.png" alt="T-shirt with a ballon on the front. ">
+              <img src="img/tshirt-balloon.png" alt="T-shirt with a ballon on the front. ">
               <figcaption class="product-info">
                 <p class="product-name">Balloon T-Shirt</p>
                 <p class="product-date">September 2015</p>
@@ -54,7 +54,7 @@
           </figure>
           <figure class="col-1of3"><a href="current-item.html">
             <div class="product-listing">
-              <img src="img/tshirt_cake.png" alt="T-shirt with a cake on the front.">
+              <img src="img/tshirt-cake.png" alt="T-shirt with a cake on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Cake T-Shirt</p>
                 <p class="product-date">August 2015</p>
@@ -65,7 +65,7 @@
         <div class="grid-container">
           <figure class="col-1of3"><a href="current-item.html">
             <div class="product-listing">
-              <img src="img/tshirt_xmastree.png" alt="T-shirt with Xmas trees on the front.">
+              <img src="img/tshirt-xmastree.png" alt="T-shirt with Xmas trees on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Xmas Trees T-Shirt</p>
                 <p class="product-date">August 2015</p>
@@ -74,7 +74,7 @@
           </figure>
           <figure class="col-1of3"><a href="current-item.html">
             <div class="product-listing">
-              <img src="img/tshirt_cupcake.png" alt="T-shirt with a cupcake on the front.">
+              <img src="img/tshirt-cupcake.png" alt="T-shirt with a cupcake on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Cupcake T-Shirt</p>
                 <p class="product-date">July 2015</p>
@@ -83,7 +83,7 @@
           </figure>
           <figure class="col-1of3"><a href="current-item.html">
             <div class="product-listing">
-              <img src="img/tshirt_paper.png" alt="T-shirt with two falling children on the front.">
+              <img src="img/tshirt-paper.png" alt="T-shirt with two falling children on the front.">
               <figcaption class="product-info">
                 <p class="product-name">Celebrate T-Shirt</p>
                 <p class="product-date">July 2015</p>
