--- a/past-item.html
+++ b/past-item.html
@@ -20,7 +20,7 @@
 
       <!-- // NAVIGATION -->
       <nav class="fixed-nav-bar">
-        <a href="home.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
+        <a href="index.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
         <ul>
           <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
@@ -30,7 +30,7 @@
       <section id="current-item">
 
         <div class="product-view more-below">
-          <img src="img/tshirt_box.png" alt="T-shirt with a gift box on the front." class="img-product-view">
+          <img src="img/tshirt-box.png" alt="T-shirt with a gift box on the front." class="img-product-view">
           <h1>Gift Box T-Shirt</h1>
           <p class="product-date">This style ran until September 30, 2015.</p>
           <p>This gift box t-shirt is made from a 100% bamboo tri-blend, and available in black, yellow, and white. It's a unisex fit and can be machine-washed and dried without any trouble.</p>
