--- a/review.html
+++ b/review.html
@@ -8,6 +8,7 @@
     <title>Fit to a Tee</title>
 
     <link href="css/normalize.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Hind:400,600' rel='stylesheet' type='text/css'>
     <link href="css/main.css" rel="stylesheet">
 
   </head>
