Created item pages for one new current style and one new past style

--- a/checkout.html
+++ b/checkout.html
@@ -54,7 +54,7 @@
               </div>
             </dl>
           </div>
-          <a class="button edit" href="current-item.html">Edit</a>
+          <a class="button edit" href="current-item-bike.html">Edit</a>
           <a class="button delete" href="">Delete</a>
         </div>
 
@@ -81,7 +81,7 @@
               </div>
             </dl>
           </div>
-          <a class="button edit" href="current-item.html">Edit</a>
+          <a class="button edit" href="current-item-mountain.html">Edit</a>
           <a class="button delete" href="">Delete</a>
         </div>
 
@@ -108,7 +108,7 @@
               </div>
             </dl>
           </div>
-          <a class="button edit" href="current-item.html">Edit</a>
+          <a class="button edit" href="current-item-bike.html">Edit</a>
           <a class="button delete" href="">Delete</a>
         </div>
         <p class="subtotal-checkout">
