--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2 class="subheading">Current Styles</h2>
 
         <div class="grid-container">
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
               <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
               <figcaption class="product-info">
@@ -50,7 +50,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-mountain.html">
             <div class="product-listing">
               <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
               <figcaption class="product-info">
@@ -59,7 +59,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
               <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
               <figcaption class="product-info">
@@ -76,7 +76,7 @@
       <h2 class="subheading">Past Styles</h2>
 
         <div class="grid-container">
-          <figure class="col-1of3"><a href="past-item.html">
+          <figure class="col-1of3"><a href="past-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-box.png" alt="T-shirt with a gift box on the front. ">
               <figcaption class="product-info">
@@ -85,7 +85,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="past-item.html">
+          <figure class="col-1of3"><a href="past-item-balloon.html">
             <div class="product-listing">
               <img src="img/tshirt-balloon.png" alt="T-shirt with a ballon on the front. ">
               <figcaption class="product-info">
@@ -94,7 +94,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="past-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-cake.png" alt="T-shirt with a cake on the front.">
               <figcaption class="product-info">
