--- a/past-styles.html
+++ b/past-styles.html
@@ -34,7 +34,7 @@
       <section id="past-styles">
         
         <div class="grid-container">
-          <figure class="col-1of3"><a href="past-item.html">
+          <figure class="col-1of3"><a href="past-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-box.png" alt="T-shirt with a gift box on the front. ">
               <figcaption class="product-info">
@@ -43,7 +43,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="past-item.html">
+          <figure class="col-1of3"><a href="past-item-balloon.html">
             <div class="product-listing">
               <img src="img/tshirt-balloon.png" alt="T-shirt with a ballon on the front. ">
               <figcaption class="product-info">
@@ -52,7 +52,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="past-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-cake.png" alt="T-shirt with a cake on the front.">
               <figcaption class="product-info">
@@ -63,7 +63,7 @@
           </figure>
         </div>
         <div class="grid-container">
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="past-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-xmastree.png" alt="T-shirt with Xmas trees on the front.">
               <figcaption class="product-info">
@@ -72,7 +72,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="past-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-cupcake.png" alt="T-shirt with a cupcake on the front.">
               <figcaption class="product-info">
@@ -81,7 +81,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="past-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-paper.png" alt="T-shirt with two falling children on the front.">
               <figcaption class="product-info">
