--- a/review.html
+++ b/review.html
@@ -34,19 +34,19 @@
       <div class="grid-container more-below">
         <div class="col-1of3 more-below-small">
           <p>
-            <strong>Bike T-Shirt (Red)</strong> <a class="url" href="current-item.html">Change</a><br/>
+            <strong>Bike T-Shirt (Red)</strong> <a class="url" href="current-item-bike.html">Change</a><br/>
             $29.99</br>
             Extra Small<br/>
             Quantity: 1
           </p>
           <p>
-            <strong>Mountain T-Shirt (Blue)</strong> <a class="url" href="current-item.html">Change</a><br/>
+            <strong>Mountain T-Shirt (Blue)</strong> <a class="url" href="current-item-mountain.html">Change</a><br/>
             $29.99</br>
             Extra Small<br/>
             Quantity: 1
           </p>
           <p>
-            <strong>UFO T-Shirt (Purple)</strong> <a class="url" href="current-item.html">Change</a><br/>
+            <strong>UFO T-Shirt (Purple)</strong> <a class="url" href="current-item-bike.html">Change</a><br/>
             $29.99</br>
             Extra Small<br/>
             Quantity: 1
