--- a/current-styles.html
+++ b/current-styles.html
@@ -34,7 +34,7 @@
       <section id="current-items">
         
         <div class="grid-container">
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
               <img src="img/tshirt-bike.png" alt="T-shirt with a bike on the front. The bike has people standing on its seat.">
               <figcaption class="product-info">
@@ -43,7 +43,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-mountain.html">
             <div class="product-listing">
               <img src="img/tshirt-mountain.png" alt="T-shirt with two mountains on the front. The tall mountain is thinking about food.">
               <figcaption class="product-info">
@@ -52,7 +52,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
               <img src="img/tshirt-picnic.png" alt="T-shirt with a picnic basket containing chicken, watermelon, and lemonade on the front.">
               <figcaption class="product-info">
@@ -63,7 +63,7 @@
           </figure>
         </div>
         <div class="grid-container">
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
               <img src="img/tshirt-trees.png" alt="T-shirt with walking trees on the front.">
               <figcaption class="product-info">
@@ -72,7 +72,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
               <img src="img/tshirt-ufo.png" alt="T-shirt with a UFO abducting a man on the front.">
               <figcaption class="product-info">
@@ -81,7 +81,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="current-item.html">
+          <figure class="col-1of3"><a href="current-item-bike.html">
             <div class="product-listing">
               <img src="img/tshirt-falling.png" alt="T-shirt with two falling children on the front.">
               <figcaption class="product-info">
