--- a/discontinued-styles.html
+++ b/discontinued-styles.html
@@ -21,12 +21,12 @@
       <nav class="fixed-nav-bar">
         <a href="index.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
         <ul>
-          <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
+          <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="discontinued-styles.html">Discontinued Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
       </nav>
       <!-- NAVIGATION // -->
 
-      <h1>Past Styles</h1>
+      <h1>Discontinued Styles</h1>
       <p class="subheading">These are styles that ran over the past three months. You can't buy them anymore, but you can check them out and see how you like our work!</p>
 
        <!-- // PAST-STYLES // -->
@@ -34,7 +34,7 @@
       <section id="past-styles">
         
         <div class="grid-container">
-          <figure class="col-1of3"><a href="past-item-box.html">
+          <figure class="col-1of3"><a href="discontinued-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-box.png" alt="T-shirt with a gift box on the front. ">
               <figcaption class="product-info">
@@ -43,7 +43,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="past-item-balloon.html">
+          <figure class="col-1of3"><a href="discontinued-item-balloon.html">
             <div class="product-listing">
               <img src="img/tshirt-balloon.png" alt="T-shirt with a ballon on the front. ">
               <figcaption class="product-info">
@@ -52,7 +52,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="past-item-box.html">
+          <figure class="col-1of3"><a href="discontinued-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-cake.png" alt="T-shirt with a cake on the front.">
               <figcaption class="product-info">
@@ -63,7 +63,7 @@
           </figure>
         </div>
         <div class="grid-container">
-          <figure class="col-1of3"><a href="past-item-box.html">
+          <figure class="col-1of3"><a href="discontinued-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-xmastree.png" alt="T-shirt with Xmas trees on the front.">
               <figcaption class="product-info">
@@ -72,7 +72,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="past-item-box.html">
+          <figure class="col-1of3"><a href="discontinued-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-cupcake.png" alt="T-shirt with a cupcake on the front.">
               <figcaption class="product-info">
@@ -81,7 +81,7 @@
               </figcaption>
             </div></a>
           </figure>
-          <figure class="col-1of3"><a href="past-item-box.html">
+          <figure class="col-1of3"><a href="discontinued-item-box.html">
             <div class="product-listing">
               <img src="img/tshirt-paper.png" alt="T-shirt with two falling children on the front.">
               <figcaption class="product-info">
