--- a/style-guide.html
+++ b/style-guide.html
@@ -217,14 +217,14 @@
             <h4>Sample code:</h4>
             <code>&lt;nav&gt;<br/>
               <span class="indent">&lt;a class="button navlink" href=""&gt;Current Styles&lt;/a&gt;</span><br/>
-              <span class="indent">&lt;a class="button navlink" href=""&gt;Past Styles&lt;/a&gt;</span><br/>
+              <span class="indent">&lt;a class="button navlink" href=""&gt;Discontinued Styles&lt;/a&gt;</span><br/>
               <span class="indent">&lt;a class="button navlink" href=""&gt;About&lt;/a&gt;</span><br/>
               <span class="indent">&lt;a class="button navlink checkout" href=""&gt;Checkout (2)&lt;/a&gt;</span><br/>
             &lt;/nav&gt;</code>
 
             <h4>Rendered element:</h4>
             <nav>
-              <a class="button navlink" href="">Current Styles</a><a class="button navlink" href="">Past Styles</a><a class="button navlink" href="">About</a><a class="button navlink checkout" href="">Checkout (2)</a>
+              <a class="button navlink" href="">Current Styles</a><a class="button navlink" href="">Discontinued Styles</a><a class="button navlink" href="">About</a><a class="button navlink checkout" href="">Checkout (2)</a>
             </nav>
         </section>
 
@@ -405,7 +405,7 @@
               <span class="indent">&lt;img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."&gt;</span><br/>
               <span class="indent">&lt;ul&gt;</span><br/>
                 <span class="indent-2">&lt;li&gt;&lt;a class="button navlink" href=""&gt;Current Styles&lt;/a&gt;&lt;/li&gt;</span><br/>
-                <span class="indent-2">&lt;li&gt;&lt;a class="button navlink" href=""&gt;Past Styles&lt;/a&gt;&lt;/li&gt;</span><br/>
+                <span class="indent-2">&lt;li&gt;&lt;a class="button navlink" href=""&gt;Discontinued Styles&lt;/a&gt;&lt;/li&gt;</span><br/>
                 <span class="indent-2">&lt;li&gt;&lt;a class="button navlink" href=""&gt;About&lt;/a&gt;&lt;/li&gt;</span><br/>
                 <span class="indent-2">&lt;li&gt;&lt;a class="button navlink checkout" href=""&gt;Checkout (2)&lt;/a&gt;&lt;/li&gt;</span><br/>
               <span class="indent">&lt;/ul&gt;</span><br/>
