--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
       <nav class="fixed-nav-bar">
         <a href="index.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
         <ul>
-          <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
+          <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="discontinued-styles.html">Discontinued Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
       </nav>
       <!-- NAVIGATION // -->
@@ -101,7 +101,7 @@
           <div class="col-1of3">
             <h3>October styles are here!</h3>
             <p class="updates-date">October 1, 2015</p>
-            <p>Our September styles have officially ended, and our October styles are here for the next month. <a href="current-styles.html">Check out the current styles!</a></p>
+            <p>Our September styles have officially been discontinued, and our October styles are here for the next month. <a href="current-styles.html">Check out the current styles!</a></p>
           </div>
           <div class="col-1of3">
             <h3>Fall Renovations</h3>
