--- a/current-styles.html
+++ b/current-styles.html
@@ -21,13 +21,17 @@
       <nav class="fixed-nav-bar">
         <a href="index.html"><img class="img-navbar" src="img/logo-navbar.png" alt="Fit to a Tee logo."></a>
         <ul>
-          <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="past-styles.html">Past Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
+          <li><a class="button navlink" href="current-styles.html">Current Styles</a></li><li><a class="button navlink" href="discontinued-styles.html">Discontinued Styles</a></li><li><a class="button navlink" href="about.html">About</a></li><li><a class="button navlink checkout" href="checkout.html">Checkout (3)</a></li>
         </ul>
       </nav>
       <!-- NAVIGATION // -->
 
       <h1>Current Styles</h1>
       <p class="subheading">These styles only run until <strong>October 31, 2015</strong>, so get them while you can!</p>
+
+      <div id="countdown">
+        <p class="days">00</p><p class="timeRefDays">days</p><p class="hours">00</p><p class="timeRefHours">hours</p><p class="minutes">00</p><p class="timeRefMinutes">minutes</p><p class="seconds">00</p><p class="timeRefSeconds">seconds</p>
+      </div>
 
        <!-- // CURRENT-STYLES // -->
 
@@ -106,5 +110,9 @@
       </footer>
         
     </div>
+
+    <!-- Run the scripts only at the end, after loading the page -->
+    <script src="js/jquery.js"></script>
+    <script src="js/countdown.js"></script>
   </body>
 </html>
